@@ -1,15 +1,0 @@
-{% autostrip %}
-
-{% foreach i in [1, 2, 3, 4, 5] %}
-{{ i }}
-{% if i == 3 %}
-{% break %}
-{% endif %}
-{% endfor +%}
-
-{% foreach i in [1, 2, 3, 4, 5] %}
-{% if i == 3 %}
-{% continue %}
-{% endif %}
-{{ i }}
-{% endfor +%}
